--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@acidev/sails-generate-vue-component",
-  "version": "1.0.0",
+  "name": "@funhouse-atelier/sails-generate-vue-component",
+  "version": "1.0.1",
   "description": "sails generate vue-component",
   "main": "index.js",
   "scripts": {
@@ -15,7 +15,7 @@
     "generate",
     "plugin"
   ],
-  "author": "acidev",
+  "author": "Funhouse Atelier",
   "license": "MIT",
   "dependencies": {
     "@sailshq/lodash": "^3.10.3"
@@ -23,7 +23,10 @@
   "devDependencies": {
     "eslint": "3.19.0"
   },
-  "repository": {"type":"git","url":"git://github.com/acidev/sails-generate-vue-component.git"},
+  "repository": {
+    "type":"git",
+    "url":"https://github.com/FunhouseAtelier/sails-generate-vue-component.git"
+  },
   "sailsGenerator": {
     "type": "vue-component",
     "behavior": "Implements or overrides `sails generate vue-component`",
