--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
   ],
   "author": "Funhouse Atelier",
   "license": "MIT",
-  "dependencies": {
-    "@sailshq/lodash": "^3.10.3"
-  },
+  "dependencies": {},
   "devDependencies": {
     "eslint": "3.19.0"
   },
